2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-13  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicOptionPaneUI.java
        (createMessageArea): Enabled input components to be used
        in OptionPanes.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-13  Roman Kennke  <roman@kennke.org>

        * javax/swing/JDialog.java
        (setDefaultCloseOperation): Don't throw an IllegalArgumentException
        but instead accept illegal values as DO_NOTHING_ON_CLOSE.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-13  Roman Kennke  <roman@kennke.org>

        * javax/swing/ScrollPaneLayout.java
        (getViewportBorderBounds): Documented methods.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-13  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicProgressBarUI.java
        (getPreferredSize): Changed implementation so that getGraphics()
        is not used (this triggers a NPE).

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-13  Roman Kennke  <roman@kennke.org>

        * javax/swing/RepaintManager.java:
        (getVolatileOffscreenBuffer): Added methods.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-13  Roman Kennke  <roman@kennke.org>

        * javax/swing/DefaultButtonModel.java:
        Removed superfluous semicolon.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-13  Roman Kennke  <roman@kennke.org>

        * javax/swing/AbstractButton.java
        (ButtonChangeListener): Added this inner class.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-13  Roman Kennke  <roman@kennke.org>

        * javax/swing/JComponent.java
        (requestFocus): Added method.